--- a/sections/predictive-search.liquid
+++ b/sections/predictive-search.liquid
@@ -8,102 +8,35 @@
   <div id="predictive-search-results" role="listbox">
     <div id="predictive-search-results-groups-wrapper" class="predictive-search__results-groups-wrapper">
       <div class="predictive-search__result-group">
-        <div>
-          <h2 id="predictive-search-queries" class="h3">
-            Search Suggestions
-          </h2>
-          {%- if predictive_search.resources.queries.size > 0 or predictive_search.resources.collections.size > 0 -%}
-            <ul
-              id="predictive-search-results-queries-list"
-              class="predictive-search__results-list list-unstyled"
-              role="group"
-              aria-labelledby="predictive-search-queries"
-            >
-              {%- for query in predictive_search.resources.queries -%}
-                <li
-                  id="predictive-search-option-query-{{ forloop.index }}"
-                  class="predictive-search__list-item"
-                  role="option"
-                  aria-selected="false"
-                >
-                  <a href="{{ query.url }}" class="predictive-search__item link link--text" tabindex="-1">
-                    <div class="predictive-search__item-content predictive-search__item-content--centered">
-                      <p
-                        class="predictive-search__item-heading predictive-search__item-query-result h5"
-                        aria-label="{{ query.text }}"
-                      >
-                        {{ query.styled_text }}
-                      </p>
-                    </div>
-                  </a>
-                </li>
-              {%- endfor -%}
-              {%- for collection in predictive_search.resources.collections -%}
-                <li
-                  id="predictive-search-option-collection-{{ forloop.index }}"
-                  class="predictive-search__list-item"
-                  role="option"
-                  aria-selected="false"
-                >
-                  <a href="{{ collection.url }}" class="predictive-search__item link link--text" tabindex="-1">
-                    <div class="predictive-search__item-content predictive-search__item-content--centered">
-                      <p class="predictive-search__item-heading h5">{{ collection.title | escape }}</p>
-                    </div>
-                  </a>
-                </li>
-              {%- endfor -%}
-            </ul>
-          {%- else -%}
-              <p>No Suggestions</p>
-          {%- endif -%}
-        </div>
-        <div class="predictive-search__pages-wrapper">
-          <h2
-            id="predictive-search-pages-desktop"
-            class="h3"
-          >
-            Learn
-          </h2>
-          {%- if predictive_search.resources.articles.size > 0 or predictive_search.resources.pages.size > 0 -%}
-          <ul
-            id="predictive-search-results-pages-list-desktop"
-            class="predictive-search__results-list list-unstyled"
-            role="group"
-            aria-labelledby="predictive-search-pages-desktop"
-          >
-            {%- for page in predictive_search.resources.pages -%}
-              <li
-                id="predictive-search-option-page-desktop-{{ forloop.index }}"
-                class="predictive-search__list-item"
-                role="option"
-                aria-selected="false"
-              >
-                <a href="{{ page.url }}" class="predictive-search__item link link--text" tabindex="-1">
+        <h2 id="predictive-search-queries" class="h3">
+          Search Suggestions
+        </h2>
+        {%- if predictive_search.resources.queries.size > 0 or predictive_search.resources.collections.size > 0 -%}
+          <ul id="predictive-search-results-queries-list" class="predictive-search__results-list list-unstyled" role="group" aria-labelledby="predictive-search-queries">
+            {%- for query in predictive_search.resources.queries -%}
+              <li id="predictive-search-option-query-{{ forloop.index }}" class="predictive-search__list-item" role="option" aria-selected="false">
+                <a href="{{ query.url }}" class="predictive-search__item link link--text" tabindex="-1">
                   <div class="predictive-search__item-content predictive-search__item-content--centered">
-                    <p class="predictive-search__item-heading h5">{{ page.title | escape }}</p>
+                    <p class="predictive-search__item-heading predictive-search__item-query-result h5" aria-label="{{ query.text }}">
+                      {{ query.styled_text }}
+                    </p>
                   </div>
                 </a>
               </li>
             {%- endfor -%}
-            {%- for article in predictive_search.resources.articles -%}
-              <li
-                id="predictive-search-option-article-desktop-{{ forloop.index }}"
-                class="predictive-search__list-item"
-                role="option"
-                aria-selected="false"
-              >
-                <a href="{{ article.url }}" class="predictive-search__item link link--text" tabindex="-1">
+            {%- for collection in predictive_search.resources.collections -%}
+              <li id="predictive-search-option-collection-{{ forloop.index }}" class="predictive-search__list-item" role="option" aria-selected="false">
+                <a href="{{ collection.url }}" class="predictive-search__item link link--text" tabindex="-1">
                   <div class="predictive-search__item-content predictive-search__item-content--centered">
-                    <p class="predictive-search__item-heading h5">{{ article.title | escape }}</p>
+                    <p class="predictive-search__item-heading h5">{{ collection.title | escape }}</p>
                   </div>
                 </a>
               </li>
             {%- endfor -%}
           </ul>
-          {%- else -%}
-            <p>No articles</p>
-          {%- endif -%}
-        </div>
+        {%- else -%}
+            <p>No Suggestions</p>
+        {%- endif -%}
       </div>
       <div class="predictive-search__result-group">
         <div>
@@ -111,32 +44,12 @@
             Products <a href="/collections/all-products" class="link">View all </a>
           </h2>
           {%- if predictive_search.resources.products.size > 0 -%}
-            <ul
-              id="predictive-search-results-products-list"
-              class="predictive-search__results-list list-unstyled"
-              role="group"
-              aria-labelledby="predictive-search-products"
-            >
+            <ul id="predictive-search-results-products-list" class="predictive-search__results-list list-unstyled" role="group" aria-labelledby="predictive-search-products">
               {%- for product in predictive_search.resources.products -%}
-                <li
-                  id="predictive-search-option-product-{{ forloop.index }}"
-                  class="predictive-search__list-item"
-                  role="option"
-                  aria-selected="false"
-                >
-                  <a
-                    href="{{ product.url }}"
-                    class="predictive-search__item predictive-search__item--link-with-thumbnail link link--text"
-                    tabindex="-1"
-                  >
+                <li id="predictive-search-option-product-{{ forloop.index }}" class="predictive-search__list-item" role="option" aria-selected="false">
+                  <a href="{{ product.url }}" class="predictive-search__item predictive-search__item--link-with-thumbnail link link--text" tabindex="-1">
                     {%- if product.featured_media != blank -%}
-                      <img
-                        class="predictive-search__image"
-                        src="{{ product.featured_media | image_url: width: 150 }}"
-                        alt="{{ product.featured_media.alt | escape }}"
-                        width="50"
-                        height="{{ 50 | divided_by: product.featured_media.preview_image.aspect_ratio }}"
-                      >
+                      <img class="predictive-search__image" src="{{ product.featured_media | image_url: width: 150 }}" alt="{{ product.featured_media.alt | escape }}" width="50" height="{{ 50 | divided_by: product.featured_media.preview_image.aspect_ratio }}">
                     {%- endif -%}
                     <div class="predictive-search__item-content{% unless settings.predictive_search_show_vendor or settings.predictive_search_show_price %} predictive-search__item-content--centered{% endunless %}">
                       {%- if settings.predictive_search_show_vendor -%}
@@ -158,60 +71,42 @@
             <p>No products found</p>
           {%- endif -%}
         </div>
+      </div>
+      <div class="predictive-search__result-group">
         <div class="predictive-search__pages-wrapper">
-          <h2 id="predictive-search-pages-mobile" class="h3">
-            {{- 'templates.search.pages' | t -}}
+          <h2 id="predictive-search-pages-desktop" class="h3">
+            Learn
           </h2>
-            {%- if predictive_search.resources.articles.size > 0 or predictive_search.resources.pages.size > 0 -%}
-            <ul
-              id="predictive-search-results-pages-list-mobile"
-              class="predictive-search__results-list list-unstyled"
-              role="group"
-              aria-labelledby="predictive-search-pages-mobile"
-            >
-              {%- for page in predictive_search.resources.pages -%}
-                <li
-                  id="predictive-search-option-page-mobile-{{ forloop.index }}"
-                  class="predictive-search__list-item"
-                  role="option"
-                  aria-selected="false"
-                >
-                  <a href="{{ page.url }}" class="predictive-search__item link link--text" tabindex="-1">
-                    <div class="predictive-search__item-content predictive-search__item-content--centered">
-                      <p class="predictive-search__item-heading h5">{{ page.title | escape }}</p>
-                    </div>
-                  </a>
-                </li>
-              {%- endfor -%}
-              {%- for article in predictive_search.resources.articles -%}
-                <li
-                  id="predictive-search-option-article-mobile-{{ forloop.index }}"
-                  class="predictive-search__list-item"
-                  role="option"
-                  aria-selected="false"
-                >
-                  <a href="{{ article.url }}" class="predictive-search__item link link--text" tabindex="-1">
-                    <div class="predictive-search__item-content predictive-search__item-content--centered">
-                      <p class="predictive-search__item-heading h5">{{ article.title | escape }}</p>
-                    </div>
-                  </a>
-                </li>
-              {%- endfor -%}
-            </ul>
+          {%- if predictive_search.resources.articles.size > 0 or predictive_search.resources.pages.size > 0 -%}
+          <ul id="predictive-search-results-pages-list-desktop" class="predictive-search__results-list list-unstyled" role="group" aria-labelledby="predictive-search-pages-desktop">
+            {%- for page in predictive_search.resources.pages -%}
+              <li id="predictive-search-option-page-desktop-{{ forloop.index }}" class="predictive-search__list-item" role="option" aria-selected="false">
+                <a href="{{ page.url }}" class="predictive-search__item link link--text" tabindex="-1">
+                  <div class="predictive-search__item-content predictive-search__item-content--centered">
+                    <p class="predictive-search__item-heading h5">{{ page.title | escape }}</p>
+                  </div>
+                </a>
+              </li>
+            {%- endfor -%}
+            {%- for article in predictive_search.resources.articles -%}
+              <li id="predictive-search-option-article-desktop-{{ forloop.index }}" class="predictive-search__list-item" role="option" aria-selected="false">
+                <a href="{{ article.url }}" class="predictive-search__item link link--text" tabindex="-1">
+                  <div class="predictive-search__item-content predictive-search__item-content--centered">
+                    <p class="predictive-search__item-heading h5">{{ article.title | escape }}</p>
+                  </div>
+                </a>
+              </li>
+            {%- endfor -%}
+          </ul>
+          {%- else -%}
+            <p>No articles</p>
           {%- endif -%}
-          </div>
+        </div>
       </div>
     </div>
-
     {%- render 'loading-spinner', class: 'predictive-search__loading-state' -%}
-
     <div id="predictive-search-option-search-keywords" class="predictive-search__search-for-button">
-      <button
-        class="predictive-search__item predictive-search__item--term link link--text h5 animate-arrow"
-        tabindex="-1"
-        role="option"
-        aria-selected="false"
-      >
+      <button class="predictive-search__item predictive-search__item--term link link--text h5 animate-arrow" tabindex="-1" role="option" aria-selected="false">
         <span data-predictive-search-search-for-text>
           {{- 'templates.search.search_for' | t: terms: predictive_search.terms -}}
         </span>
