--- a/assets/app.css
+++ b/assets/app.css
@@ -1190,6 +1190,10 @@ ol {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.hover\:twcss-opacity-75:hover {
+  opacity: 0.75;
+}
+
 @media (min-width: 750px) {
   .md\:twcss-block {
     display: block;
