--- a/assets/component-predictive-search.css
+++ b/assets/component-predictive-search.css
@@ -30,7 +30,9 @@
   padding: 1rem;
   gap: 2rem;
   > * {
-    flex-grow: 1; /* Allow each child to grow */
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: 20%;
   }
 }
 
@@ -87,7 +89,7 @@ ul#predictive-search-results-products-list li {
 
 .predictive-search__products {
   flex-basis: 60%;
-  flex-grow: 0;
+  flex-grow: 0 !important;
 }
 
 .predictive-search__heading {
