--- a/assets/component-predictive-search.css
+++ b/assets/component-predictive-search.css
@@ -28,10 +28,9 @@
   justify-content: space-between;
   border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
   padding: 1rem;
-  gap: 2rem;
+  gap: 4rem;
   > * {
     flex-grow: 1;
-    flex-shrink: 0;
     flex-basis: 20%;
   }
 }
@@ -79,7 +78,7 @@ predictive-search[loading] .predictive-search {
 
 ul#predictive-search-results-products-list {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(36rem, 1fr));
   gap: 2rem;
 }
 
@@ -147,9 +146,25 @@ predictive-search[loading]
   text-underline-offset: 0.3rem;
 }
 
+.predictive-search__list-item .icon {
+  height: 1.6rem;
+  width: 1.6rem;
+  margin-right: 1rem;
+}
+
+.predictive-search__products .predictive-search__list-item {
+  position: relative;
+}
+
+.predictive-search__products .predictive-search__list-item span.link {
+  position: absolute;
+  padding-bottom: 1rem;
+  bottom: 0;
+}
+
 .predictive-search__item {
   display: flex;
-  padding: 1rem;
+  padding: 1rem 0 1rem 0;
   text-align: left;
   text-decoration: none;
   width: 100%;
