--- a/assets/app.css
+++ b/assets/app.css
@@ -1119,8 +1119,16 @@ ol {
   display: none;
 }
 
+.twcss-h-48 {
+  height: 12rem;
+}
+
 .twcss-w-full {
   width: 100%;
+}
+
+.twcss-w-48 {
+  width: 12rem;
 }
 
 .twcss-max-w-\[1440px\] {
