--- a/sections/cl-slideshow.liquid
+++ b/sections/cl-slideshow.liquid
@@ -1,14 +1,14 @@
 {{ 'section-image-banner.css' | asset_url | stylesheet_tag }}
 {{ 'component-slider.css' | asset_url | stylesheet_tag }}
-{{ 'component-slideshow.css' | asset_url | stylesheet_tag }}
+{{ 'cl-component-slideshow.css' | asset_url | stylesheet_tag }}
 {{ 'flickity.min.css' | asset_url |  stylesheet_tag }}
 
 {%- if section.settings.slide_height == 'adapt_image' and section.blocks.first.settings.image != blank -%}
   {%- style -%}
     @media screen and (max-width: 749px) {
-      #Slider-{{ section.id }}::before,
-      #Slider-{{ section.id }} .media::before,
-      #Slider-{{ section.id }}:not(.banner--mobile-bottom) .banner__content::before {
+      #CL-Slider-{{ section.id }}::before,
+      #CL-Slider-{{ section.id }} .media::before,
+      #CL-Slider-{{ section.id }}:not(.banner--mobile-bottom) .banner__content::before {
         padding-bottom: {{ 1 | divided_by: section.blocks.first.settings.image.aspect_ratio | times: 100 }}%;
         content: '';
         display: block;
@@ -16,8 +16,8 @@
     }
 
     @media screen and (min-width: 750px) {
-      #Slider-{{ section.id }}::before,
-      #Slider-{{ section.id }} .media::before {
+      #CL-Slider-{{ section.id }}::before,
+      #CL-Slider-{{ section.id }} .media::before {
         padding-bottom: {{ 1 | divided_by: section.blocks.first.settings.image.aspect_ratio | times: 100 }}%;
         content: '';
         display: block;
@@ -26,7 +26,7 @@
   {%- endstyle -%}
 {%- endif -%}
 
-<slideshow-component
+<cl-slideshow-component
   class="slider-mobile-gutter{% if section.settings.layout == 'grid' %} page-width{% endif %}{% if section.settings.show_text_below %} mobile-text-below{% endif %}"
   role="region"
   aria-roledescription="{{ 'sections.slideshow.carousel' | t }}"
@@ -91,16 +91,15 @@
   {%- endif -%}
 
   <div
-    class="carousel banner banner--{{ section.settings.slide_height }} grid grid--1-col slider slider--everywhere{% if section.settings.show_text_below %} banner--mobile-bottom{% endif %}{% if section.blocks.first.settings.image == blank %} slideshow--placeholder{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}"
+    class="cl-slideshow banner banner--{{ section.settings.slide_height }} grid grid--1-col {% if section.settings.show_text_below %} banner--mobile-bottom{% endif %}{% if section.blocks.first.settings.image == blank %} slideshow--placeholder{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}"
     id="CL-Slider-{{ section.id }}"
     aria-live="polite"
     aria-atomic="true"
-    data-flickity='{ "wrapAround": true }'
   >
     {%- for block in section.blocks -%}
       <div
-        class="carousel-cell slideshow__slide grid__item grid--1-col slider__slide"
-        id="Slide-{{ section.id }}-{{ forloop.index }}"
+        class="cl-slideshow__slide cl-slider__slide"
+        id="CL-Slide"-Slide-{{ section.id }}-{{ forloop.index }}"
         {{ block.shopify_attributes }}
         role="group"
         aria-roledescription="{{ 'sections.slideshow.slide' | t }}"
@@ -234,32 +233,20 @@
       {%- endif -%}
     </div>
   {%- endif -%}
-</slideshow-component>
+</cl-slideshow-component>
 <script src="{{ 'flickity.pkgd.min.js' | asset_url }}" defer="defer"></script>
-<style>
-/* Basic CSS for Flickity */
-.carousel {
-  background: #EEE;
-  margin-bottom: 20px;
-  height: 100%;
-}
-
-.carousel-cell {
-  width: 60% !important;
-  height: 100%;
-  margin-right: 10px;
-  background: #8C8;
-  border-radius: 5px;
-  counter-increment: gallery-cell;
-}
-
-/* Ensure the images fit well in the cell */
-.carousel-cell img {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-</style>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    var elem = document.querySelector('.cl-slideshow');
+    var flkty = new Flickity(elem, {
+      // options
+      cellSelector: '.cl-slideshow__slide',
+      wrapAround: true,
+      setGallerySize: false
+      // additional options can be added here
+    });
+  });
+</script>
 
 {%- if request.design_mode -%}
   <script src="{{ 'theme-editor.js' | asset_url }}" defer="defer"></script>
