--- a/assets/custom-tailwind.css
+++ b/assets/custom-tailwind.css
@@ -231,10 +231,10 @@ form#bh-sl-user-location .scasl-search-btn {
 
 /** Slider buttons **/
 .slider-buttons {
-  @apply twcss-flex twcss-gap-4;
+  @apply twcss-flex twcss-gap-4 twcss-py-8;
 }
 
-.slider-buttons button {
+.slider-buttons button.slider-button {
   @apply twcss-bg-[#D0DEE5] twcss-rounded-md twcss-p-4;
 }
 
