Updated correct label

--- a/sections/cl-slideshow.liquid
+++ b/sections/cl-slideshow.liquid
@@ -344,7 +344,7 @@
           "label": "t:sections.slideshow.settings.slider_visual.options__3.label"
         },
         {
-          "value": "None",
+          "value": "none",
           "label": "None"
         }
       ],
