--- a/sections/cl-slideshow.liquid
+++ b/sections/cl-slideshow.liquid
@@ -91,7 +91,7 @@
   {%- endif -%}
 
   <div
-    class="cl-slideshow banner banner--{{ section.settings.slide_height }} grid grid--1-col {% if section.settings.show_text_below %} banner--mobile-bottom{% endif %}{% if section.blocks.first.settings.image == blank %} slideshow--placeholder{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}"
+    class="cl-slideshow banner banner--{{ section.settings.slide_height }} {% if section.settings.show_text_below %} banner--mobile-bottom{% endif %}{% if section.blocks.first.settings.image == blank %} slideshow--placeholder{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}"
     id="CL-Slider-{{ section.id }}"
     aria-live="polite"
     aria-atomic="true"
@@ -99,7 +99,7 @@
     {%- for block in section.blocks -%}
       <div
         class="cl-slideshow__slide cl-slider__slide"
-        id="CL-Slide"-Slide-{{ section.id }}-{{ forloop.index }}"
+        id="CL-Slide-{{ section.id }}-{{ forloop.index }}"
         {{ block.shopify_attributes }}
         role="group"
         aria-roledescription="{{ 'sections.slideshow.slide' | t }}"
